Fix sidebar collapse

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -82,6 +82,7 @@ $link-color:                    #F57C00;
   height: 100%;
   padding-top: 80px;
   padding: 80px 30px 0 30px;
+  overflow: hidden;
   
   #style-menu {
     margin-bottom: 40px;
